css/style.css
@charset "UTF-8";

/* CSS Document */

/*------------------------------------------------------------------

Template Name:      Hair Salon Website Templates Free Download
Version:            1.0.0
Created Date:       30/03/2017 
Author:             Jitu Chauhan 

------------------------------------------------------------------
[CSS Table of contents]

1.  Body / Typography 
2.  Form Elements
3.  Buttons
4.  General / Elements
        4.1 Section space
        4.2 Margin space
        4.3 Padding space
        4.4 Background color
        4.5 Features
        4.7 Call to actions
        4.8 Img hover effect
        4.9 Icon
        -----------------------
5. Header / Navigations
        5.1 Header Regular
        5.2 Header Transparent
        5.3 Navigation Regular
        5.4 Page Header

        -----------------------
6. Slider
        6.1 Slider
        -----------------------
7. Content
8. Footers
9. Pages
    9.1  Service
    9.2  Service Single / sidebar with sidenav
    9.3  Testimonial
    9.4  Contact us
    9.5  Styleguide
    ------------------------------------
10.Blog
    10.1 Blog Default
    10.2 Blog Single
    ------------------------------------
11.Sidebar
    11.1 Widget
    ------------------------------------

13. Media Queries

------------------------------------------------------------------*/

/*-----------------------------------
    1. Body / Typography 
-----------------------------------*/

body { font-size: 16px;
    background-color: #fff;
    color: #5d5c59;
    font-family: 'Roboto', sans-serif;
    line-height: 28px;
    font-weight: 300; }
h1, h2, h3, h4, h5, h6 { margin: 0; padding: 0; margin-bottom: 10px; color: #18150d; font-weight: 400; 
    font-family: 'Montserrat', sans-serif; text-transform: uppercase; -webkit-font-smoothing: antialiased; text-rendering: optimizeLegibility; }
h1 { font-size: 32px; line-height: 42px; }
h2 { font-size: 24px; line-height: 32px; }
h3 { font-size: 18px; line-height: 28px; }
h4 { font-size: 16px; line-height: 24px; margin-bottom: 10px; }
h5 { font-size: 14px; }
h6 { font-size: 12px; }
p { margin: 0 0 20px; }
p:last-child { margin-bottom: 0px; }
ul, ol { margin: 0; }
ul li, ol li { }
a { color: #2e7d32; text-decoration: none; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; transition: all 0.3s; }
a:focus, a:hover { text-decoration: none; color: #8e7424; }
 
b, strong {
    font-weight: 400;
}
.listnone { list-style: none; padding: 0px; }
.lead { font-size: 21px; color: #3c3c3c; font-weight: 400; }
.italic { font-style: italic; }
.small-text { color: #b4b1ac; font-size: 12px; }
.text-caps { text-transform: uppercase; letter-spacing: 2px; }
::selection { background: #ffecb3; color: #333; }
h3 small { font-weight: 400; line-height: 1; color: #2e7d32; font-size: 14px; }
 
hr { margin-top: 20px; margin-bottom: 20px; border: 0; border-top: 1px solid #f1f3f8; }
blockquote { padding: 10px 20px; margin: 0px; font-size: 21px; line-height: 32px; color: #3c3c3c; font-style: italic; border-left: 5px solid #2e7d32; }

/*-------------- align ------------*/

/* =WordPress Core
-------------------------------------------------------------- */

.alignnone { margin: 5px 20px 20px 0; }
.aligncenter, div.aligncenter { display: block; margin: 5px auto 5px auto; }
.alignright { float: right; margin: 0px 0 30px 30px;  }
.alignleft { float: left; margin: 0px 30px 0px 0;   }
a img.alignright { float: right; margin: 0px 0 30px 30px; }
a img.alignnone { margin: 5px 20px 20px 0; }
a img.alignleft { float: left; margin: 5px 20px 20px 0; }
a img.aligncenter { display: block; margin-left: auto; margin-right: auto; }
.wp-caption { background: #fff; border: 1px solid #f0f0f0; max-width: 96%;    /* Image does not overflow the content area */ padding: 5px 3px 10px; text-align: center; }
.wp-caption.alignnone { margin: 5px 20px 20px 0; }
.wp-caption.alignleft { margin: 5px 20px 20px 0; }
.wp-caption.alignright { margin: 5px 0 20px 20px; }
.wp-caption img { border: 0 none; height: auto; margin: 0; max-width: 98.5%; padding: 0; width: auto; }
.wp-caption p.wp-caption-text { font-size: 11px; line-height: 17px; margin: 0; padding: 0 4px 5px; }

/*-----------------------------------
    2. Form css 
-----------------------------------*/
label { }
.control-label { color: #474747; font-weight: 700; font-size: 12px; text-transform: uppercase; }
.form-control { width: 100%; height: 50px; padding: 6px 12px; 
    font-size: 16px; line-height: 1.42857143; color: #333; background-color: #fff; border: 1px solid #dcd9d3; 
    background-image: none; border-radius: 10px; -webkit-box-shadow: inset 0 0px 0px rgba(255, 255, 255, .075); 
    box-shadow: inset 3px 3px 3px rgba(255, 255, 255, .075); margin-bottom: 15px; }
.form-control:focus { border-color: #bab6ae;
    outline: 0;
    -webkit-box-shadow: inset 0 1px 1px rgba(255, 255, 255, .075), 0 0 8px rgba(255, 255, 255, .6);
    box-shadow: inset 0 3px 3px rgba(255, 255, 255, .075), 0 0 8px rgba(235, 237, 238, .6);
    background-color: #fffefd; }
.textarea.form-control { background-color: #f6f8f9; height: auto; }
.required { }
.form-news-letter .form-control { float: left; width: 75%; margin-right: 10px; }
.form-group { margin-bottom: 10px; }
.get-in-touch { }
.get-in-touch .form-control { margin-bottom: 10px; }

/*-----------------------------------
    3. Buttons 
-----------------------------------*/
.btn { display: inline-block; padding: 14px 10px; margin-bottom: 0; font-size: 13px; font-weight: 800; 
    letter-spacing: 1px; line-height: 1.42857143; text-align: center; border: none; 
    text-transform: uppercase; border-radius: 100px;font-family: 'Montserrat', sans-serif; -webkit-font-smoothing: antialiased; text-rendering: optimizeLegibility;}
.btn-default { color: #FFFFFF; padding-bottom: 18px;background-color:#2e7d32;text-align: "cente" }
.btn-default:hover {  color: #fff; background-color: #210747; border-color: #210747; }
/* ... */

